--- a/FrontEnd/Changelog.txt
+++ b/FrontEnd/Changelog.txt
@@ -1,3 +1,8 @@
+Version 0.4 (9:30PM 27/4/2017)
+ - A basic working User Interface (uses swing, will likely be updated to JavaFX)
+ - Program now uses a seperate .java file that contains AWS credential information
+	- hopefully, this file will never be uploaded
+
 Version 0.3 (11:20PM 20/4/2017)
  - Transaction tracking implemented (Still needs work though)
  - Work started on admin functionality (not functional)
@@ -5,7 +10,6 @@ Version 0.3 (11:20PM 20/4/2017)
 	- now reports of whether or not the program has finished downloading the data
  - Fixed issue with saving stock info to server
  
-
 Version 0.2
  - All ASX entries being returned from server 
  - ASX data for current date being returned.
